--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "husky": "^0.14.0",
     "jest": "^22.0.2",
     "lint-staged": "^7.0.0",
+    "lodash": "^4.17.10",
     "lodash.camelcase": "^4.3.0",
     "nodemon": "^1.17.3",
     "prettier": "^1.4.4",
@@ -101,6 +102,7 @@
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.11.1",
     "semantic-release": "^15.1.7",
+    "travis-deploy-once": "^4.4.1",
     "ts-jest": "^22.0.0",
     "ts-node": "^6.0.0",
     "tslint": "^5.8.0",
@@ -108,11 +110,9 @@
     "tslint-config-standard": "^7.0.0",
     "typedoc": "^0.11.0",
     "typescript": "^2.6.2",
-    "validate-commit-msg": "^2.12.2",
-    "travis-deploy-once": "^4.4.1"
+    "validate-commit-msg": "^2.12.2"
   },
   "dependencies": {
-    "lodash": "^4.17.10",
     "reflect-metadata": "^0.1.12"
   }
 }
