--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,6 @@
+# EditorConfig helps developers define and maintain
+# consistent coding styles between different editors and IDEs.
+
 root = true
 
 [*]
@@ -6,15 +9,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
+indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
-
-[src/**.{ts,json,js}]
-indent_size = 4
-
-[src/**.scss]
-indent_size = 4
-
-[src/**.html]
-indent_size = 4
