--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,10 @@
 language: node_js
-cache:
-  directories:
-    - ~/.npm
-notifications:
-  email: false
 node_js:
-  - '10'
-  - '9'
   - '8'
   - '6'
-after_success:
-  - npm run travis-deploy-once "npm run semantic-release"
+script:
+  - npm run test
+  - npm run build
 branches:
-  except:
-    - /^v\d+\.\d+\.\d+$/
+  only:
+    - master
