--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
   "name": "light-mapper",
-  "version": "0.0.0-development",
+  "version": "1.1.6",
   "description": "",
+  "main": "./lib/index.js",
+  "scripts": {
+    "clean": "rimraf lib",
+    "test": "npm run lint && npm run cover",
+    "test:prod": "cross-env BABEL_ENV=production npm run test",
+    "test:only": "mocha --require babel-core/register --require babel-polyfill --recursive",
+    "test:watch": "npm test -- --watch",
+    "test:examples": "node examples/",
+    "cover": "nyc --check-coverage npm run test:only",
+    "build": "cross-env BABEL_ENV=production tsc --module commonjs",
+    "prepublish": "npm run clean && npm run build"
+  },
+  "files": [
+    "lib",
+    "src"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hajekj14/light-mapper.git"
+  },
   "keywords": [
     "mapper",
     "object mapper",
@@ -9,118 +29,30 @@
     "light-mapper",
     "typescript"
   ],
-  "main": "dist/light-mapper.umd.js",
-  "module": "dist/light-mapper.es5.js",
-  "typings": "dist/types/light-mapper.d.ts",
-  "files": [
-    "dist"
-  ],
   "author": "Hajek Jiri <hajekj14@gmail.com>",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hajekj14/light-mapper.git"
-  },
   "license": "MIT",
-  "engines": {
-    "node": ">=6.0.0"
+  "bugs": {
+    "url": "https://github.com/flexdinesh/npm-module-boilerplate/issues"
   },
-  "scripts": {
-    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
-    "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
-    "start": "rollup -c rollup.config.ts -w",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
-    "deploy-docs": "ts-node tools/gh-pages-publish",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release",
-    "semantic-release-prepare": "cross-env NPM_TOKEN=58356073-a0ed-4197-8f46-b69f0c676e01 GH_TOKEN=fd8285fee4674afbd9216eb229061bc53897bc75 ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged",
-    "play": "nodemon -L -e ts --watch playground.ts --exec ts-node --project tsconfig.json src/playground.ts",
-    "prepush": "npm run test:prod && npm run build",
-    "commitmsg": "validate-commit-msg",
-    "travis-deploy-once": "travis-deploy-once"
-  },
-  "lint-staged": {
-    "{src,test}/**/*.ts": [
-      "prettier --write --no-semi --single-quote",
-      "git add"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    },
-    "validate-commit-msg": {
-      "types": "conventional-commit-types",
-      "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
-    }
-  },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 5,
-        "functions": 5,
-        "lines": 5,
-        "statements": 5
-      }
-    },
-    "collectCoverage": true,
-    "mapCoverage": true
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "tag": "latest"
-  },
+  "homepage": "https://github.com/flexdinesh/npm-module-boilerplate#readme",
   "devDependencies": {
-    "@types/jest": "^22.0.0",
-    "@types/node": "^9.3.0",
-    "colors": "^1.1.2",
-    "commitizen": "^2.9.6",
-    "coveralls": "^3.0.0",
-    "cross-env": "^5.0.1",
-    "cz-conventional-changelog": "^2.0.0",
-    "husky": "^0.14.0",
-    "jest": "^22.0.2",
-    "lint-staged": "^7.0.0",
-    "lodash": "^4.17.10",
-    "lodash.camelcase": "^4.3.0",
-    "nodemon": "^1.17.3",
-    "prettier": "^1.4.4",
-    "prompt": "^1.0.0",
-    "replace-in-file": "^3.0.0-beta.2",
-    "rimraf": "^2.6.1",
-    "rollup": "^0.57.0",
-    "rollup-plugin-commonjs": "^9.0.0",
-    "rollup-plugin-json": "^2.3.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.11.1",
-    "semantic-release": "^15.12.4",
-    "travis-deploy-once": "^5.0.9",
-    "ts-jest": "^22.0.0",
-    "ts-node": "^6.0.0",
-    "tslint": "^5.8.0",
-    "tslint-config-prettier": "^1.1.0",
-    "tslint-config-standard": "^7.0.0",
-    "typedoc": "^0.11.0",
-    "typescript": "^2.6.2",
-    "validate-commit-msg": "^2.12.2"
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.5.0",
+    "chai": "^4.1.2",
+    "cross-env": "^5.1.3",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "mocha": "^6.1.3",
+    "nyc": "^13.3.0",
+    "rimraf": "^2.6.2",
+    "typescript": "^2.6.2"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.12"
