--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,14 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
-    "declarationDir": "dist/types",
-    "outDir": "dist/lib",
+    "declarationDir": "lib",
+    "outDir": "lib",
     "typeRoots": [
       "node_modules/@types"
     ]
   },
   "include": [
-    "src"
+    "src",
+    "index.ts"
   ]
 }
